Update resume and it’s links

--- a/source/resume.html.haml
+++ b/source/resume.html.haml
@@ -9,12 +9,12 @@ page_class: 'resume'
   %h2.category-title Overview
   .item
     -# Front end
-      %p
-        I love learning a concept and understanding how it fits together in the larger picture. To gain a better view of the full stack I'm moving away from back end development and focusing on front end challenges. I'm interested in writing what the user interacts with and making sure they have an wonderful experience. I'm looking for a company focused on quality and a position where I can explore new problems and come up with creative solutions.
+    %p
+      I love learning a concept and understanding how it fits together in the larger picture. To gain a better view of the full stack I'm moving away from back end development and focusing on front end challenges. I'm interested in writing what the user interacts with and making sure they have an wonderful experience. I'm looking for a company focused on quality and a position where I can explore new problems and come up with creative solutions.
 
     -# Teaching
-    %p
-      I am driven to help people who help themselves. I love learning, and especially enjoy learning with others for encouragement and different perspectives. At work I'm an advocate for pair programming to share knowledge around the team. Outside of work I volunteer in the community, and run my own study groups so I can learn alongside other motivated programmers. I want to take this passion for education and community further and reach a wider audience. I'm looking for a role where I can encourage learners to explore new ideas and challenge them to do their best work.
+      %p
+        I am driven to help people who help themselves. I love learning, and especially enjoy learning with others for encouragement and different perspectives. At work I'm an advocate for pair programming to share knowledge around the team. Outside of work I volunteer in the community, and run my own study groups so I can learn alongside other motivated programmers. I want to take this passion for education and community further and reach a wider audience. I'm looking for a role where I can encourage learners to explore new ideas and challenge them to do their best work.
 
 %section.category.experience
   %h2.category-title Experience
@@ -29,9 +29,9 @@ page_class: 'resume'
     %p.item-key-tech
       JavaScript (ES6), Less, React, Redux, Closure Templates, QUnit
     %ul.item-personal-details
-      %li Built the front end for features such as a repo importer, personal dashboards, and refactoring notifications
-      %li Lead the development of the tags feature which involved working with designers and the backend developers to stay on track as well as implementing the feature in the front end.
-      %li Introduced pair programming as a method to share things we learned, decrease time for code review, and spread knowledge about the codebase, quality expectations, and who to ask which questions
+      %li Built the front end for features such as a repo importer, personal dashboards, and refacted code for notifications
+      %li Lead the development of the tags feature which involved working with designers and the backend developers to stay on track as well as implementing the feature in the front end
+      %li Introduced pair programming as a method to share things we learned, decrease time for code review, and spread knowledge about the codebase, quality expectations, and learn who to ask which questions
       %li Organised and ran many diversity efforts, including facilitating mentor rings for women, holding events to foster a sense of community, and empowering other women to take ownership of these efforts to make them self-sustaining
 
   .item
@@ -44,9 +44,9 @@ page_class: 'resume'
     %p.item-key-tech Ruby on Rails, RSpec, MongoDB, JS, CSS
     %ul.item-personal-details
       %li Developed primarily on the backend for client facing sites (both our own and white labeling)
-      %li Designed RESTful APIs for consumption by our sites additionally worked on gems to consume the APIs by the sites
+      %li Designed RESTful APIs for consumption by our sites, additionally worked on gems to consume the APIs by the sites
       %li Wrote unit, integration, and acceptance tests for code to improve long term maintainability
-      %li Designed and implement denormalised data structures (using Mongoid and MongoDB)
+      %li Designed and implemented denormalised data structures (using Mongoid and MongoDB)
       %li Pair programmed to discover, implement, and communicate code standards among the team
       %li Enforced quality standards in code reviews to catch bugs early and encourage refactoring to minimize technical debt
 
@@ -59,7 +59,7 @@ page_class: 'resume'
     .item-date Nov 2011 - May 2013
     %p.item-key-tech Ruby on Rails, RSpec, JS, Python, Django
     %ul.item-personal-details
-      %li Developed new features for multiple web apps including delicious.com in Ruby on Rails and Python
+      %li Developed new features in Ruby on Rails and Python for multiple web apps including delicious.com
       %li Learned Ruby on Rails on the job when the company moved away from Python and Django
 
 
@@ -132,7 +132,7 @@ page_class: 'resume'
     %ul.item-personal-details
 
       %li Coordinated Rails Girls workshops for 40+ attendees and 15+ mentors, including finding sponsors, a venue, and mentors, advertising for applicants, and providing food and drinks
-      %li Developed, mentored future leaders in, and documented the process for organising a Rails Girls event for future leaders to follow
+      %li Developed, documented, and mentored future leaders in the process for organising a Rails Girls event
       %li Hosted or ran over 15 workshops for Women Who Code, including a workshop to come up with conference proposals and open sourced the worksheet (#{link_to 'lucybain.com/blog/2016/proposal-ideas-workshop/', '/blog/2016/proposal-ideas-workshop/'})
 
 
@@ -146,7 +146,7 @@ page_class: 'resume'
     %ul.item-personal-details
       %li Created and led a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com/2014-js', 'http://www.codesydney.com/2014-js/'})
       %li Led an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
-      %li Organised study groups for more advanced Python, debugging, and interview practice (#{link_to 'meetup.com/Sydney-programming-study-group/', 'http://www.meetup.com/Sydney-programming-study-group//'})
+      %li Organised study groups for more advanced Python, debugging, and interview practice
       %li Implemented an incentive based payment system to encourage members to attend
 
   .item
