--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -46,6 +46,14 @@ $large-screen:  generate_media_query($large-size)
     @media #{$large-screen}
       @content
 
+@mixin link_color($color)
+  color: $color
+  background-color: rgba($color, .1)
+  box-shadow: 5px 0 0 rgba($color, .1), -5px 0 0 rgba($color, .1)
+  &:hover
+    background-color: rgba($color, .2)
+    box-shadow: 5px 0 0 rgba($color, .2), -5px 0 0 rgba($color, .2)
+
 @import base
 @import nav
 @import home
