Add download link to resume

--- a/source/layouts/shared/_header.html.haml
+++ b/source/layouts/shared/_header.html.haml
@@ -6,15 +6,15 @@
       %li
   %ul.nav-display
     %li
-      =nav_link 'Me', '/', class: 'nav-link'
+      =nav_link 'Me', '/', class: 'link-button'
     %li
-      =nav_link 'Resume', '/resume/', class: 'nav-link'
+      =nav_link 'Resume', '/resume/', class: 'link-button'
     %li
-      =nav_link 'Contact', '/contact-me/', class: 'nav-link'
+      =nav_link 'Contact', '/contact-me/', class: 'link-button'
     %li
-      =nav_link 'Resources', '/resources/', class: 'nav-link'
+      =nav_link 'Resources', '/resources/', class: 'link-button'
     %li
-      =nav_link 'Blog', '/blog/', class: 'nav-link'
+      =nav_link 'Blog', '/blog/', class: 'link-button'
 
 :javascript
   $('nav .nav-open-btn').on('click', function(){
