--- a/source/resume.html.haml
+++ b/source/resume.html.haml
@@ -6,7 +6,9 @@ page_class: 'resume'
   %p #{link_to 'lucybain.com', 'http://lucybain.com'}
 
 %section.category.overview
-  %h2.category-title Overview
+  .two-part-title
+    %h2.category-title Overview
+    %a.download-link.link-button{download: '', href: '/lucy-bain-resume.pdf'} Download resume
   .item
     -# Front end
     %p
