--- a/source/stylesheets/_nav.sass
+++ b/source/stylesheets/_nav.sass
@@ -17,19 +17,8 @@ nav
       list-style: none
       margin-bottom: 0
 
-      a
-        border-radius: 5px
-        color: $white
-        font-weight: $bold
-        margin-right: 15px
-        padding: 10px 20px 10px
-
-        &:hover
-          background-color: $dark-accent
-          text-decoration: none
-
-        &.active
-          background-color: $dark-accent
+      .link-button.active
+        background-color: $dark-accent
 
   // Menu hamburger
   .nav-open-btn
