--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -22,6 +22,18 @@ a
       text-decoration: underline
       background-color: transparent
 
+  &.link-button
+    border-radius: 5px
+    color: $white
+    font-weight: $bold
+    margin-right: 15px
+    padding: 10px 20px 10px
+    box-shadow: none
+    &:hover
+      background-color: $dark-accent
+      text-decoration: none
+      box-shadow: none
+
 b, strong, bold
   font-weight: $bold
 
