Correct image meta tag to use the asset hashing url introduced in 70bdf0f385984e764fa00d8a58d6b15d55b8f5d1

--- a/source/layouts/shared/_head.html.erb
+++ b/source/layouts/shared/_head.html.erb
@@ -10,7 +10,7 @@
 <meta name="twitter:card" content="summary">
 <meta property="og:title" content="<%= web_page_title %>"/>
 <meta name="og:description" content="<%= page_description %>"/>
-<meta property="og:image" content="http://lucybain.com/images/social-share.png" />
+<meta property="og:image" content="<%= image_url('social-share.png') %>" />
 <meta property="og:url" content="http://lucybain.com/" />
 
 <% if is_blog_article? %>
