Update header links to use https

--- a/source/layouts/shared/_head.html.erb
+++ b/source/layouts/shared/_head.html.erb
@@ -11,7 +11,7 @@
 <meta property="og:title" content="<%= web_page_title %>"/>
 <meta name="og:description" content="<%= page_description %>"/>
 <meta property="og:image" content="<%= image_url('social-share.png') %>" />
-<meta property="og:url" content="http://lucybain.com/" />
+<meta property="og:url" content="https://lucybain.com/" />
 
 <% if is_blog_article? %>
   <meta property="og:type" content="article" />
@@ -26,6 +26,6 @@
 <% end %>
 
 <link href="/images/favicon.ico" rel="icon" type="image/ico"></link>
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro" rel="stylesheet" type="text/css"></link>
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro" rel="stylesheet" type="text/css"></link>
 <%= stylesheet_link_tag "syntax_highlighting", media: "all" %>
 <%= stylesheet_link_tag "application", media: "all" %>
