better print view

--- a/source/stylesheets/_resume.sass
+++ b/source/stylesheets/_resume.sass
@@ -155,6 +155,7 @@ $technical-color: #f78a4f
       margin-bottom: 5px
     .personal-details
       display: block
+      margin-bottom: 0
     nav
       display: none
     .content
@@ -163,6 +164,8 @@ $technical-color: #f78a4f
       margin-top: 10px
       padding-bottom: 1px
       padding-left: 30px
+    .item-personal-details
+      margin-bottom: 0
     .category
       margin-top: 20px
     .category-title
@@ -181,6 +184,7 @@ $technical-color: #f78a4f
     li, p
       margin-bottom: 0.2em
     .overview
+      margin-top: 0
       .item
         padding-left: 0
         margin-left: 0
